--- a/index.html
+++ b/index.html
@@ -148,9 +148,14 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a
+                    <!-- <a
                       class="nav-link"
                       href="html/dbt-services/dbt-farmer.html"
+                    > -->
+                    <a
+                      class="nav-link"
+                      href="http://gis.mahapocra.gov.in/pocra_dashboard/"
+                      target="_blank"
                     >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-tractor"></i>
