--- a/html/weather-services/weather-forecast.html
+++ b/html/weather-services/weather-forecast.html
@@ -129,7 +129,15 @@
                   data-bs-parent="#sidenavAccordion"
                 >
                   <nav class="sb-sidenav-menu-nested nav">
-                    <a class="nav-link" href="../dbt-services/dbt-farmer.html">
+                    <!-- <a
+                      class="nav-link"
+                      href="../dbt-services/dbt-farmer.html"
+                    > -->
+                    <a
+                      class="nav-link"
+                      href="http://gis.mahapocra.gov.in/pocra_dashboard/"
+                      target="_blank"
+                    >
                       <div class="sb-nav-link-icon">
                         <i class="fa-solid fa-tractor"></i>
                       </div>
