--- a/test.html
+++ b/test.html
@@ -14,12 +14,7 @@
     <!-- <base href="" /> -->
     <!-- Favicon for page -->
     <link rel="icon" type="image/x-icon" href="assets/logo/favicon.ico" />
-    <!-- JQuery and Bootstrap -->
-    <script
-      type="text/javascript"
-      src="libs/jquery/code.jquery.com_jquery-3.7.1.min.js"
-    ></script>
-    <script src="libs/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
+
     <!-- font awesome -->
     <link rel="stylesheet" href="css/all_font-awesome.min.css" />
     <!-- Open Layer CSS Library -->
@@ -30,6 +25,12 @@
     <link href="css/customBootstrap.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <!-- All functions of bootstrap are declared in custom styles.css, so no need to call additonal bootstrap.css -->
+    <!-- JQuery and Bootstrap -->
+    <script
+      type="text/javascript"
+      src="libs/jquery/code.jquery.com_jquery-3.7.1.min.js"
+    ></script>
+    <script src="libs/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
@@ -405,6 +406,100 @@
           <!-- Loader Animation -->
           <div id="layer-loader"></div>
         </main>
+
+        <!--  -->
+
+        <!-- Carousel -->
+        <div>
+          <div id="demo" class="carousel slide" data-bs-ride="carousel">
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#demo"
+                data-bs-slide-to="0"
+                class="active"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#demo"
+                data-bs-slide-to="1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#demo"
+                data-bs-slide-to="2"
+              ></button>
+            </div>
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+              <div class="carousel-item active thumbnail">
+                <img
+                  class="rounded float-start"
+                  style="
+                    width: 100%;
+                    height: 200px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    transition: 0.3s;
+                  "
+                  src="${feature.get('desk5_img')}"
+                  data-bs-toggle="modal"
+                  data-bs-target="#enlargeImageModal"
+                />
+              </div>
+              <div class="carousel-item thumbnail">
+                <img
+                  class="rounded float-start"
+                  style="
+                    width: 100%;
+                    height: 200px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    transition: 0.3s;
+                  "
+                  src="${feature.get('desk6_img')}"
+                  data-bs-toggle="modal"
+                  data-bs-target="#enlargeImageModal"
+                />
+              </div>
+              <div class="carousel-item thumbnail">
+                <img
+                  class="rounded float-start"
+                  style="
+                    width: 100%;
+                    height: 200px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    transition: 0.3s;
+                  "
+                  src="${feature.get('desk7_img')}"
+                  data-bs-toggle="modal"
+                  data-bs-target="#enlargeImageModal"
+                />
+              </div>
+            </div>
+            <!-- Left and right controls/icons -->
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#demo"
+              data-bs-slide="prev"
+            >
+              <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#demo"
+              data-bs-slide="next"
+            >
+              <span class="carousel-control-next-icon"></span>
+            </button>
+          </div>
+        </div>
+        <!--  -->
+
         <!-- Footer -->
         <footer class="py-4 bg-light mt-auto">
           <div class="container-fluid px-4">
