NRM check box layout change for small screen

--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -229,8 +229,6 @@
                   </nav>
                 </div>
               </div>
-
-              <!--  -->
               <!-- Soil Pages -->
               <div class="soil-pages">
                 <div class="sb-sidenav-menu-heading">Soil</div>
@@ -269,7 +267,6 @@
                   </nav>
                 </div>
               </div>
-
               <!-- Make My Map Pages -->
               <div class="make-my-map-pages">
                 <div class="sb-sidenav-menu-heading">Make My Map</div>
@@ -311,20 +308,20 @@
               <!-- Project Report Pages -->
               <div class="report-pages">
                 <div class="sb-sidenav-menu-heading">Other Reports</div>
-                <a class="nav-link" href="project-reports.html">
+                <a class="nav-link" href="../../project-reports.html">
                   <div class="sb-nav-link-icon">
                     <!-- <i class="fas fa-chart-area"></i> -->
                     <i class="fa-solid fa-magnifying-glass-chart"></i>
                   </div>
                   Project Reports
                 </a>
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="../../charts.html">
                   <div class="sb-nav-link-icon">
                     <i class="fas fa-chart-area"></i>
                   </div>
                   Charts
                 </a>
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="../../tables.html">
                   <div class="sb-nav-link-icon">
                     <i class="fas fa-table"></i>
                   </div>
@@ -445,9 +442,7 @@
                 >
                   <div class="accordion-body">
                     <div class="row">
-                      <div
-                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
-                      >
+                      <div class="cat checkbox-checked col-xl-2 col-md-4">
                         <label class="cursor-pointer fw-bold">
                           <input
                             type="radio"
@@ -459,9 +454,7 @@
                           /><span>Community Application</span>
                         </label>
                       </div>
-                      <div
-                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
-                      >
+                      <div class="cat checkbox-checked col-xl-2 col-md-4">
                         <label class="cursor-pointer fw-bold">
                           <input
                             type="radio"
@@ -472,9 +465,7 @@
                           /><span>Technical Sanction</span>
                         </label>
                       </div>
-                      <div
-                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
-                      >
+                      <div class="cat checkbox-checked col-xl-2 col-md-4">
                         <label class="cursor-pointer fw-bold">
                           <input
                             type="radio"
@@ -485,9 +476,7 @@
                           /><span>E-Tendering</span>
                         </label>
                       </div>
-                      <div
-                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
-                      >
+                      <div class="cat checkbox-checked col-xl-2 col-md-4">
                         <label class="cursor-pointer fw-bold">
                           <input
                             type="radio"
@@ -498,9 +487,7 @@
                           /><span>Work Order Issued</span>
                         </label>
                       </div>
-                      <div
-                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
-                      >
+                      <div class="cat checkbox-checked col-xl-2 col-md-4">
                         <label class="cursor-pointer fw-bold">
                           <input
                             type="radio"
@@ -511,9 +498,7 @@
                           /><span>Work Completed</span>
                         </label>
                       </div>
-                      <div
-                        class="cat checkbox-checked col-xl-2 col-lg-2 col-md-4"
-                      >
+                      <div class="cat checkbox-checked col-xl-2 col-md-4">
                         <label class="cursor-pointer fw-bold">
                           <input
                             type="radio"
@@ -581,7 +566,6 @@
               </div>
             </div>
           </div>
-
           <!-- Modal -->
           <div
             class="modal fade"
