--- a/project-reports.html
+++ b/project-reports.html
@@ -20,11 +20,11 @@
     <link rel="icon" type="image/x-icon" href="./assets/logo/favicon.ico" />
     <!-- Custom Style -->
     <!-- Bootstrap 5 Style -->
-    <link href="../../css/customBootstrap.css" rel="stylesheet" />
-    <link href="../../css/styles.css" rel="stylesheet" />
+    <link href="./css/customBootstrap.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
     <!-- All functions of bootstrap are declared in custom styles.css, so no need to call additonal bootstrap.css -->
     <!-- font awesome -->
-    <link rel="stylesheet" href="./css/all_font-awesome.min.css" />
+    <link rel="stylesheet" href="css/all_font-awesome.min.css" />
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
