change in popup content

--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -591,7 +591,7 @@
                   <!-- Image is loaded from API via source  -->
                   <div>
                     <div
-                      id="demo"
+                      id="modal-carasoul"
                       class="carousel slide"
                       data-bs-ride="carousel"
                     >
@@ -599,18 +599,18 @@
                       <div class="carousel-indicators">
                         <button
                           type="button"
-                          data-bs-target="#demo"
+                          data-bs-target="#modal-carasoul"
                           data-bs-slide-to="0"
                           class="active"
                         ></button>
                         <button
                           type="button"
-                          data-bs-target="#demo"
+                          data-bs-target="#modal-carasoul"
                           data-bs-slide-to="1"
                         ></button>
                         <button
                           type="button"
-                          data-bs-target="#demo"
+                          data-bs-target="#modal-carasoul"
                           data-bs-slide-to="2"
                         ></button>
                       </div>
@@ -619,55 +619,51 @@
                         <div class="carousel-item active thumbnail">
                           <img
                             id="modal-1"
-                            class="rounded float-start"
-                            style="
-                              width: 100%;
-                              border-radius: 5px;
-                              cursor: pointer;
-                              transition: 0.3s;
-                            "
+                            class="rounded float-start carasoul-modal-img"
                             src=""
                             data-bs-toggle="modal"
                             data-bs-target="#enlargeImageModal"
                           />
+                          <div class="carousel-caption d-none d-md-block">
+                            <h4 class="caption-title">
+                              Before execution of the Project Activity (Desk 5)
+                            </h4>
+                          </div>
                         </div>
                         <div class="carousel-item thumbnail">
                           <img
                             id="modal-2"
-                            class="rounded float-start"
-                            style="
-                              width: 100%;
-
-                              border-radius: 5px;
-                              cursor: pointer;
-                              transition: 0.3s;
-                            "
+                            class="rounded float-start carasoul-modal-img"
                             src=""
                             data-bs-toggle="modal"
                             data-bs-target="#enlargeImageModal"
                           />
+                          <div class="carousel-caption d-none d-md-block">
+                            <h4 class="caption-title">
+                              During execution of the Project Activity (Desk 6)
+                            </h4>
+                          </div>
                         </div>
                         <div class="carousel-item thumbnail">
                           <img
                             id="modal-3"
-                            class="rounded float-start"
-                            style="
-                              width: 100%;
-                              border-radius: 5px;
-                              cursor: pointer;
-                              transition: 0.3s;
-                            "
+                            class="rounded float-start carasoul-modal-img"
                             src=""
                             data-bs-toggle="modal"
                             data-bs-target="#enlargeImageModal"
                           />
+                          <div class="carousel-caption d-none d-md-block">
+                            <h4 class="caption-title">
+                              After completion of the Project Activity (Desk 7)
+                            </h4>
+                          </div>
                         </div>
                       </div>
                       <!-- Left and right controls/icons -->
                       <button
                         class="carousel-control-prev"
                         type="button"
-                        data-bs-target="#demo"
+                        data-bs-target="#modal-carasoul"
                         data-bs-slide="prev"
                       >
                         <span class="carousel-control-prev-icon"></span>
@@ -675,7 +671,7 @@
                       <button
                         class="carousel-control-next"
                         type="button"
-                        data-bs-target="#demo"
+                        data-bs-target="#modal-carasoul"
                         data-bs-slide="next"
                       >
                         <span class="carousel-control-next-icon"></span>
