hover effect on weather station

--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -362,6 +362,7 @@
                   aria-labelledby="headingSelectionMenu"
                   data-bs-parent="#accordionSelectionMenu"
                 >
+                  <!-- Dropdown Selection -->
                   <div class="accordion-body">
                     <!-- Dropdown Div -->
                     <div class="row">
@@ -416,30 +417,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
-              </div>
-            </div>
-            <!-- Application Status Radio Button -->
-            <div class="accordion mb-4" id="accordionSelectionMenu">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingSelectionMenu">
-                  <button
-                    class="accordion-button fw-bold"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseSelectionMenu"
-                    aria-expanded="true"
-                    aria-controls="collapseOne"
-                  >
-                    Application Status
-                  </button>
-                </h2>
-                <div
-                  id="collapseSelectionMenu"
-                  class="accordion-collapse collapse show"
-                  aria-labelledby="headingSelectionMenu"
-                  data-bs-parent="#accordionSelectionMenu"
-                >
+                  <!-- Application Status Radio Button -->
                   <div class="accordion-body">
                     <div class="row">
                       <div class="cat checkbox-checked col-xl-2 col-md-4">
@@ -514,6 +492,7 @@
                 </div>
               </div>
             </div>
+
             <!-- Map Div -->
             <div class="card mb-4">
               <div class="card-header" id="card-title">
