weather forecast layer added

--- a/html/weather-services/weather-forecast.html
+++ b/html/weather-services/weather-forecast.html
@@ -351,6 +351,7 @@
                               value="forecast_rainfall"
                               name="weather-forecast"
                               for="forecast-rainfall"
+                              checked="checked"
                             /><span>Rainfall</span>
                           </label>
                         </div>
@@ -392,6 +393,7 @@
                               value="day1"
                               name="weather-forecast-day"
                               for="forecast-day1"
+                              checked="checked"
                             /><span>Day 1</span>
                           </label>
                         </div>
