new api implemented to load dbt activities by category

--- a/html/dbt-services/dbt-fpc-fpo.html
+++ b/html/dbt-services/dbt-fpc-fpo.html
@@ -377,7 +377,7 @@
                 Project Juridiction
               </div>
               <div id="pocra-dbt-fpo-map" class="dbt-fpo-map">
-                <h2>Under Developement</h2>
+                <h2 style="color: red">Under Developement</h2>
               </div>
             </div>
           </div>
