added nrm existing and project structures

--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -125,8 +125,8 @@
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
           <div class="sb-sidenav-menu">
             <div class="nav">
-              <div class="sb-sidenav-menu-heading">Core</div>
-              <a class="nav-link" href="../../index.html">
+              <div class="sb-sidenav-menu-heading">PoCRA Activities</div>
+              <a class="nav-link fnt-bold" href="../../index.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-tachometer-alt"></i>
                 </div>
@@ -134,9 +134,8 @@
               </a>
               <!-- DBT Pages -->
               <div class="dbt-pages">
-                <div class="sb-sidenav-menu-heading">DBT</div>
                 <a
-                  class="nav-link collapsed"
+                  class="nav-link collapsed fnt-bold"
                   href="#"
                   data-bs-toggle="collapse"
                   data-bs-target="#collapseLayouts-DBT"
@@ -189,9 +188,8 @@
               </div>
               <!-- Weather Pages -->
               <div class="weather-pages">
-                <div class="sb-sidenav-menu-heading">Weather</div>
                 <a
-                  class="nav-link collapsed"
+                  class="nav-link collapsed fnt-bold"
                   href="#"
                   data-bs-toggle="collapse"
                   data-bs-target="#collapseLayouts-weather"
@@ -236,9 +234,8 @@
               </div>
               <!-- Soil Pages -->
               <div class="soil-pages">
-                <div class="sb-sidenav-menu-heading">Soil</div>
                 <a
-                  class="nav-link collapsed"
+                  class="nav-link collapsed fnt-bold"
                   href="#"
                   data-bs-toggle="collapse"
                   data-bs-target="#collapseLayouts-soil"
@@ -274,9 +271,8 @@
               </div>
               <!-- Make My Map Pages -->
               <div class="make-my-map-pages">
-                <div class="sb-sidenav-menu-heading">Make My Map</div>
                 <a
-                  class="nav-link collapsed"
+                  class="nav-link collapsed fnt-bold"
                   href="#"
                   data-bs-toggle="collapse"
                   data-bs-target="#collapseLayouts-make-map"
@@ -312,8 +308,7 @@
               </div>
               <!-- Project Report Pages -->
               <div class="report-pages">
-                <div class="sb-sidenav-menu-heading">Other Reports</div>
-                <a class="nav-link" href="../../project-reports.html">
+                <a class="nav-link fnt-bold" href="../../project-reports.html">
                   <div class="sb-nav-link-icon">
                     <!-- <i class="fas fa-chart-area"></i> -->
                     <i class="fa-solid fa-magnifying-glass-chart"></i>
